# real-time-processing

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  pytest.ini
backend/analytics/: models.py  urls.py
backend/analytics/migrations/: 0001_initial.py
backend/inventory/: models.py  serializers.py  services.py  urls.py  views.py
backend/inventory/migrations/: 0001_initial.py
backend/orders/: models.py  serializers.py  services.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py
backend/shipments/: models.py  urls.py
backend/shipments/migrations/: 0001_initial.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_inventory_api.py  test_inventory_service.py
backend/warehouse/: permissions.py  settings.py  urls.py
frontend/: Dockerfile  package.json
kafka-config/: README.md  create-topics.sh  topics-config.json
monitoring/: README.md
monitoring/alerting/: alert_manager.py  alert_rules.json  config.json
monitoring/grafana/dashboards/: inventory-analytics.json  warehouse-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
monitoring/grafana/provisioning/datasources/: datasources.yml
monitoring/log-viewer/: Dockerfile  README.md  app.py  pyproject.toml
monitoring/log-viewer/templates/: log_viewer.html
processing-pipeline/: Dockerfile  README.md  pyproject.toml
processing-pipeline/config/: pipeline.env
processing-pipeline/src/: main.py
processing-pipeline/src/aggregators/: base_aggregator.py  inventory_aggregator.py
processing-pipeline/src/anomaly_detection/: base_detector.py  inventory_anomaly_detector.py
processing-pipeline/src/consumers/: base_consumer.py  inventory_consumer.py
processing-pipeline/src/enrichers/: inventory_enricher.py
processing-pipeline/src/processors/: inventory_processor.py
processing-pipeline/src/storage/: base_storage.py  clickhouse_adapter.py  elasticsearch_adapter.py  influxdb_adapter.py  storage_manager.py
processing-pipeline/src/utils/: kafka_client.py
storage-config/: README.md
storage-config/clickhouse/: clickhouse-config.xml  init-db.sql
storage-config/elasticsearch/: elasticsearch.yml  index-templates.json  setup-indices.sh
storage-config/influxdb/: influxdb.env  init.sql
