[project]
name = "warehouse-log-viewer"
version = "0.1.0"
description = "Web-based log search and filtering interface for warehouse operations"
authors = [{name = "Warehouse Team", email = "team@warehouse.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3.3",
    "httpx>=0.24.1",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88